updating symtab